[package]
name = "zebra"
version = "0.2.2"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi",
    "processthreadsapi",
    "tlhelp32",
    "winnt",
    "winbase",
    "minwindef",
    "windef"
] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0"
winreg = "0.55.0"
serde = { version = "1.0.219", features = ["derive"] }